# GinyFind

./: README.Rmd  README.md  README_data.Rmd  README_data.md  lista.txt  main.py  pyproject.toml  requirements.txt
data/: build_dataset.py  test.npz
features/: __init__.py  geometric_features.py  neighbor_features.py  residue_features.py
model/: .gitignore  evaluate.py  predict.py  train.py
output/: writer.py
scripts/: build_train.py  download_pdbs.py  extract_chains_and_sequences.py  processing_full_pipeline.py  run_mmseqs.sh  split_by_homology.py
